k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: downlogger-prod
  labels:
    name: downlogger-prod
    app: downlogger
