k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: downlogger
  namespace: downlogger-prod
  labels:
    app: downlogger
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: downlogger
